<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"

        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#366"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/quest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"

        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#366"
        android:layout_margin="20dp"/>


</LinearLayout>
<LinearLayout
    android:layout_margin="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/num_1"
            android:text="@string/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textSize="50sp"

            />
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textSize="50sp"/>


        <TextView
android:text="@string/text3"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_3"/>

    </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="80dp">
    <EditText
        android:hint="@string/hint"
android:id="@+id/ed1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType=""
        android:autofillHints="" />
    <Button
        android:id="@+id/submit_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sumit_answer"
        android:onClick="onclick"/>
</LinearLayout>

</LinearLayout>